Rewirte DeliveryController with HttpServer